# website

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  index.html  package-lock.json  package.json  spin.toml  tailwind.css  tsconfig.json  vercel.json
.github/workflows/: deploy.yml
assets/: tailwind.css
assets/projects/: typst.html
assets/styling/: main.css
components/: Avatar.js  ChatUI.js  Date-tmp.js  Date.js  Footer.js  Footer.module.css  GlobalHead.js  HeaderSimple.js  HeaderSimple.module.css  HeaderSimple.tsx  Layout.js  Layout.module.css  Markdown.js  Markdown.module.css  MyHead.js  PageHead.js  PageMotion.js  ProjectCard.js  SkewMark.js  SkewMark.module.css  SkillsGroup.js  SkillsGroup.module.css  Socials.js  TagGroup.js  TagGroup.module.css  layout.module.css
lib/: api.js  projects.js
pages/: _app.js  about.js  index.js
pages/projects/: [id].js  index.js
projects/: dqc.md  functional-circuits.md  ll-tim.md  typst.typ
public/: icons.js  me.js
src/: main.rs
src/components/: gallery.rs  home.rs  mod.rs  navbar.rs  page404.rs  project.rs  projects.rs  projects_top.rs
styles/: styles.css  theme.ts
