[package]
name = "website"
version = "0.1.0"
authors = ["tim@mbp <timforrer16@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dioxus-free-icons = { version = "0.9", features = ["font-awesome-brands"] }
dioxus-markdown = { version = "0.0.1" }

[features]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
